lab-manifests/450-k8s-network-policy-nginx.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: database-policy
  namespace: yaobank
spec:
  podSelector:
    matchLabels:
      app: database
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: summary
      ports:
      - protocol: TCP
        port: 2379
---
